--- a/Hospital_project.csproj
+++ b/Hospital_project.csproj
@@ -80,6 +80,12 @@
     <Compile Include="All_Employees.Designer.cs">
       <DependentUpon>All_Employees.cs</DependentUpon>
     </Compile>
+    <Compile Include="Choose_Doctor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Choose_Doctor.Designer.cs">
+      <DependentUpon>Choose_Doctor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Choose_employee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +93,12 @@
       <DependentUpon>Choose_employee.cs</DependentUpon>
     </Compile>
     <Compile Include="Choose_employee_factory.cs" />
+    <Compile Include="Doctor_View.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Doctor_View.Designer.cs">
+      <DependentUpon>Doctor_View.cs</DependentUpon>
+    </Compile>
     <Compile Include="Doctor_View_strategy.cs" />
     <Compile Include="Employee_View.cs">
       <SubType>Form</SubType>
@@ -141,6 +153,12 @@
     <Compile Include="Past_patient.Designer.cs">
       <DependentUpon>Past_patient.cs</DependentUpon>
     </Compile>
+    <Compile Include="Patient_id.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Patient_id.Designer.cs">
+      <DependentUpon>Patient_id.cs</DependentUpon>
+    </Compile>
     <Compile Include="Patient_type.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +174,7 @@
     <Compile Include="Reciptionist.Designer.cs">
       <DependentUpon>Reciptionist.cs</DependentUpon>
     </Compile>
+    <Compile Include="Schedule_view_strategy.cs" />
     <Compile Include="Storage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +182,12 @@
       <DependentUpon>Storage.cs</DependentUpon>
     </Compile>
     <Compile Include="Storage_controller.cs" />
+    <Compile Include="Update_appointment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Update_appointment.Designer.cs">
+      <DependentUpon>Update_appointment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Update_employee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -200,6 +225,9 @@
     <EmbeddedResource Include="All_Employees.resx">
       <DependentUpon>All_Employees.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Choose_Doctor.resx">
+      <DependentUpon>Choose_Doctor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Choose_employee.resx">
       <DependentUpon>Choose_employee.cs</DependentUpon>
     </EmbeddedResource>
@@ -208,6 +236,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Doctor.resx">
       <DependentUpon>Doctor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Doctor_View.resx">
+      <DependentUpon>Doctor_View.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Employee_info.resx">
       <DependentUpon>Employee_info.cs</DependentUpon>
@@ -223,6 +254,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Get_username_or_password.resx">
       <DependentUpon>Get_username_or_password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Past_patient.resx">
+      <DependentUpon>Past_patient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Patient_id.resx">
+      <DependentUpon>Patient_id.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Patient_type.resx">
       <DependentUpon>Patient_type.cs</DependentUpon>
@@ -241,6 +278,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Storage.resx">
       <DependentUpon>Storage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Update_appointment.resx">
+      <DependentUpon>Update_appointment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Update_employee.resx">
       <DependentUpon>Update_employee.cs</DependentUpon>
